Fix posts by topic styling/spacing

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -194,6 +194,13 @@ a:hover {
   padding-bottom: 30px;
 }
 
+.list-by-topic {
+  width: 140px;
+  text-align: right;
+  vertical-align: top;
+  padding-right: 15px;
+}
+
 .older-newer a {
   color: #444;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
